--- a/src/app/todo/todo-task/todo-task.component.html
+++ b/src/app/todo/todo-task/todo-task.component.html
@@ -1,5 +1,5 @@
-<div class="card">
-    <div class="card-header">{{ task?.name }}</div>
+<div class="card" [ngClass]="getCardBorder(task?.priority)">
+    <div class="card-header bg-transparent">{{ task?.name }}</div>
     <div class="card-body">
        {{ task?.desc }}
     </div>
