--- a/src/app/components/header/app-header.component.html
+++ b/src/app/components/header/app-header.component.html
@@ -1,3 +1,9 @@
 <header class="d-flex justify-content-center">
     <div>{{ title | uppercase }}</div>
+    <!-- <div *ngFor="let hero of ( heros | flyHeros )">
+        <div class="mr-3">{{ hero.name }}</div>
+    </div> -->
+
+    
 </header>
+<!-- <button (click)="addNewHero()" class="btn btn-info">Add New Hero</button> -->
