--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -10,6 +10,7 @@
                     [mediumList]="mediumPriorityList"
                     [lowList]="lowPriorityList"
                     (deleteEvent)="captureDeleteEvent($event)"
+                    (editEvent)="captureEditEvent($event)"
 
                 >
                 </app-todo-list>
