--- a/src/app/todo/todo-form/todo-form.component.html
+++ b/src/app/todo/todo-form/todo-form.component.html
@@ -1,17 +1,26 @@
 <div class="card">
     <div class="card-body">
-        <form>
+        <form (ngSubmit)="addTask()" #f="ngForm" novalidate>
             <div class="mb-3">
-                <input name="name" [(ngModel)]="task.name" class="form-control" type="text" placeholder="Task Name" />
+                <input #name="ngModel" name="name" ngModel  class="form-control" type="text" placeholder="Task Name" required minlength="3" />
+                <div class="errors text-danger">
+                    <small *ngIf="name.touched && name.errors?.required">Field is required.</small>
+                    <small *ngIf="name.touched && name.errors?.minlength">Should have minimum 3 characters.</small>
+                </div>
             </div>
             <div class="mb-3">
-                <textarea name="desc" [(ngModel)]="task.desc" class="form-control" rows="3" placeholder="Task Description"></textarea>
+                <textarea #desc="ngModel" name="desc" ngModel class="form-control" rows="3" placeholder="Task Description" required></textarea>
+                <small class="text-danger" *ngIf="desc.touched && desc.errors?.required">Field is required.</small>
             </div>
             <div class="mb-3">
-                <input name="priority" [(ngModel)]="task.priority" class="form-control" type="number" placeholder="Task Priority" />
+                <input #priority="ngModel" name="priority" ngModel class="form-control" type="number" placeholder="Task Priority" required pattern="[1-3]" />
+                <div class="errors text-danger">
+                    <small *ngIf="priority.touched && priority.errors?.required">Field is required.</small>
+                    <small *ngIf="priority.touched && priority.errors?.pattern">Only allowed 1, 2 or 3</small>
+                </div>
             </div>
             <div>
-               <button (click)="addTask()" class="btn btn-info btn-block">Add Task</button>
+               <button [disabled]="!f?.valid" type="submit" class="btn btn-info btn-block">Add Task</button>
             </div>
         </form>
     </div>
